# integration-rust-rabbitmq

./: .env.example  .env.production  Cargo.toml  README-FINAL.md  README.md  SETUP-CORRECTED.md  docker-compose.yml  init-rabbitmq.bat  rabbitmq-init.sh  setup.bat  start-server.bat  start-service.bat  start-worker.bat  stop-service.bat
src/: config.rs  connection.rs  handlers.rs  lib.rs  main.rs  models.rs  worker_utils.rs
