[package]
name = "integration-rust-rabbitmq"
version = "0.1.0"
edition = "2024"
default-run = "integration-rust-rabbitmq"

[dependencies]
actix-web = "4"
lapin = "2.5.3"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
