[package]
name = "integration-rust-rabbitmq"
version = "0.1.0"
edition = "2024"
default-run = "integration-rust-rabbitmq"

[dependencies]
actix-web = "4"
lapin = "2.5.3"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4.41", features = ["serde"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }
lazy_static = "1.5.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2.1.3"
dotenv = "0.15.0"

[[bin]]
name = "worker"
path = "src/bin/worker.rs"
